Fix overflow-y issue in menuContainer

--- a/components/homepage/Preview.module.css
+++ b/components/homepage/Preview.module.css
@@ -1,7 +1,7 @@
 .menuContainer {
   position: relative;
   z-index: 1;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .secDiv {
@@ -12,6 +12,7 @@
   height: 550px;
   width: 800px;
   position: absolute;
+  pointer-events: none;
   top: 50%;
   left: 50%;
   -webkit-transform: translateX(-50%) translateY(-50%);
