--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,3 +4,7 @@
   margin: 0;
   font-family: Helvetica, Arial, sans-serif;
 }
+
+body {
+  min-width: 320px;
+}
